src/objects/Benefit__c.object
<CustomObject>
    <description>The purpose of this object is to associated tangible and intangible business benefits to work requests and/or projects so that cost/benefit evaluations can be made by the IT project management approval committee.</description>
    <fields>
        <fullName>ActualBenefitAmount__c</fullName>
        <label>Actual Benefit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualBenefitRealized__c</fullName>
        <label>Actual Benefit Realized</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BenefitClassification__c</fullName>
        <label>Benefit Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Graduate Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer of Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory / Keep the University Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaders in Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaders in Technology Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaders in Student Service and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaders in Competency-Based Education and Personalized Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaders in Influencing the Direction of Higher Education and Being Affordable.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BenefitDescription__c</fullName>
        <label>Benefit Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BenefitScale__c</fullName>
        <description>On a scale of 1 to 10, how much will this effect the desired outcome.  1=Some Benefit 5=Significantly Benefit 10=Improve on a massive scale.</description>
        <inlineHelpText>On a scale of 1 to 10, how much will this effect the desired outcome.  1=Some Benefit 5=Significantly Benefit 10=Improve on a massive scale.</inlineHelpText>
        <label>Benefit Scale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BenefitType__c</fullName>
        <inlineHelpText>Tangible benefits can be tied directly to a number.</inlineHelpText>
        <label>Benefit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tangible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Benefit_Amount__c</fullName>
        <label>Planned Benefit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>